config/tests/compilation_fails_checks/union_struct.rs
use config::prelude::*;


#[derive(Configuration)]
struct Union();

fn main() {}